# prom-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  log4rs.yaml
.devcontainer/: devcontainer.json  docker-compose.yml  metrics.http  serve-metrics.sh  setup.sh
.github/workflows/: rust.yml
benches/: benchmarks.rs
src/: app.rs  cli.rs  logging.rs  main.rs  model.rs  prom.rs  ui.rs
src/interactive/: app.rs  mod.rs
src/interactive/ui/: graph_data.rs  histogram_data.rs  history.rs  mod.rs  search.rs  style.rs
src/prom/: metric_scraper.rs  mod.rs  model.rs  parser.rs  request.rs  test_data.rs
src/ui/: graph.rs  metrics.rs  metrics_state.rs  mod.rs  search.rs  style.rs
